--- a/gradle.properties
+++ b/gradle.properties
@@ -2,10 +2,9 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-	# check these on https://fabricmc.net/versions.html
-	minecraft_version=1.18_experimental-snapshot-6
-	yarn_mappings=1.18_experimental-snapshot-6+build.3
-	loader_version=0.11.6
+	minecraft_version=21w40a
+	yarn_mappings=21w40a+build.1
+	loader_version=0.12.1
 
 
 # Mod Properties
@@ -13,5 +12,3 @@ org.gradle.jvmargs=-Xmx1G
 	maven_group = com.bblz
 	archives_base_name = chaseEnabler
 
-# Dependencies
-	fabric_version=0.40.0+1.18_experimental
